js/src/jit-test/tests/binast/invalid/wtf-8-scope-name.binjs
BINJS
[
GRAMMAR
]
identity
;
(
AssertedDeclaredName2AssertedScriptGlobalScope
"
BindingIdentifier0LiteralNumericExpression
Script
&
VariableDeclaration
VariableDeclarator
[
STRINGS
]
identity
;
var
a
_
[
TREE
]
identity
;
2
